# ai-call-agent

./: .env.example  .gitignore  README.md  ai_call_server.py  auto_dialer.py  call_and_stream.py  pyproject.toml  realtime_server.py  requirements.txt  run_ai_call.py  text_test.py  voice_test.py
scripts/: ngrok_start.sh  start_ai_stack.sh  test_elevenlabs_tts.py
